[package]
name = "andiskaz"
version = "0.2.0"
authors = ["brunoczim <brunoczim@gmail.com>"]
edition = "2018"
description = "A convenience library for writing games and other apps in TUI"
readme = "README.md"
repository = "https://github.com/brunoczim/andiskaz"
license-file = "LICENSE"
keywords = ["terminal", "tui", "double-buffering"]
categories = ["game-development", "asynchronous"]

[dependencies]
unicode-segmentation = "^1.6.0"
lazy_static = "^1.4"
crossterm = "^0.18"
futures = "^0.3.7"

[dependencies.tokio]
version = "^1.6"
features = [
    "macros",
    "io-util",
    "io-std",
    "sync",
    "rt",
    "rt-multi-thread",
    "fs",
    "time"
]

[dev-dependencies]
rand = "^0.7.3"
backtrace = "^0.3.54"
