[package]
name = "andiskaz"
version = "0.3.0"
authors = ["brunoczim <brunoczim@gmail.com>"]
edition = "2018"
description = "A convenience library for writing games and other apps in TUI"
readme = "README.md"
repository = "https://github.com/brunoczim/andiskaz"
license-file = "LICENSE"
keywords = ["terminal", "tui", "double-buffering"]
categories = ["game-development", "asynchronous"]

[features]
default = []
plane = ["gardiz"]
clipboard = ["cli-clipboard", "anyhow"]

[dependencies]
unicode-segmentation = "^1.6.0"
lazy_static = "^1.4"
crossterm = "^0.18"
futures = "^0.3.7"

[dependencies.gardiz]
git = "https://github.com/brunoczim/gardiz"
branch = "main"
optional = true

[dependencies.cli-clipboard]
version = "^0.2.0"
optional = true

[dependencies.anyhow]
version = "^1.0"
optional = true

[dependencies.cli-clipboard]
version = "^0.2.0"
optional = true

[dependencies.anyhow]
version = "^1.0"
optional = true

[dependencies.tokio]
version = "^1.6"
features = [
    "macros",
    "io-util",
    "io-std",
    "sync",
    "rt",
    "rt-multi-thread",
    "fs",
    "time"
]

[dev-dependencies]
rand = "^0.8"
backtrace = "^0.3.54"

[[example]]
name = "snakegame"
required-features = ["plane"]
